--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>
       Abhishek's Website
     </title>
-    <link rel="stylesheet" href="button-style.css">
+    <link rel="stylesheet" href="styles/button-style.css">
   </head>
   <body>
     <h1 class="hello">
