--- a/text.html
+++ b/text.html
@@ -4,7 +4,7 @@
 		<title>
 			Abhishek's Website
 		</title>
-		<link rel="stylesheet" href="text-style.css">
+		<link rel="stylesheet" href="styles/text-style.css">
 	</head>
 	<body>
 		<p class="video-title">
