--- a/text.html
+++ b/text.html
@@ -27,7 +27,7 @@
 			Shop early for the best selection of holiday favourites. <span class="example"><a href="https://apple.com/" target="_blank">Shop now</a></span> &gt;
 		</p>
 
-		<a href="https://abhishek6212.github.io/Abhishek/">
+		<a href="https://abhishek6212.github.io/Abhishek/index.html/">
 		  <b>Go Back</b>
 		</a>
 	</body>
