--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div id="statement">🔒Establishing Connection</div>
             </div>
             <div class="promo">
-                <div id="statement2" align="center">🧑‍💻Developed By Abhishek.</div>
+                <div id="statement2" align="center">@AbhishekKudapne On X(Twitter)</div>
             </div>
         </div>
         <div class="header">
